WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25313
Missing scrollbars in GMail
https://bugs.webkit.org/show_bug.cgi?id=25313
Summary
Missing scrollbars in GMail
Dimitri Glazkov (Google)
Reported
2009-04-21 15:32:13 PDT
This bug manifested itself most drastically in Chromium ToT, where GMail would never gain scrollbars. The condition occurs because the html element in the GMail canvas frame is given "overflow-y: scroll" dynamically (and repeatedly). Because of the "never one scrollbar at a time" check, even though it's already set to ScrollbarAlwaysOn, the vertical scrollbar may be occasionally disabled. I am still trying to figure out how to write a layout test for this :).
Attachments
GMail scroll bars missing, v1
(2.87 KB, patch)
2009-04-21 15:37 PDT
,
Dimitri Glazkov (Google)
no flags
Details
Formatted Diff
Diff
GMail scroll bars missing, v1.1
(2.35 KB, patch)
2009-04-21 15:40 PDT
,
Dimitri Glazkov (Google)
no flags
Details
Formatted Diff
Diff
GMail scroll bars missing, v2.
(5.72 KB, patch)
2009-04-21 16:12 PDT
,
Dimitri Glazkov (Google)
no flags
Details
Formatted Diff
Diff
Deficient layout test attempt
(1.32 KB, text/html)
2009-04-21 16:34 PDT
,
Dimitri Glazkov (Google)
no flags
Details
GMail scroll bars missing, v3.
(8.74 KB, patch)
2009-04-22 16:09 PDT
,
Dimitri Glazkov (Google)
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Dimitri Glazkov (Google)
Comment 1
2009-04-21 15:37:05 PDT
Created
attachment 29663
[details]
GMail scroll bars missing, v1 WebCore/ChangeLog | 11 +++++++++++ WebCore/platform/ScrollView.cpp | 22 +++++++++++----------- 2 files changed, 22 insertions(+), 11 deletions(-)
Dimitri Glazkov (Google)
Comment 2
2009-04-21 15:39:54 PDT
Comment on
attachment 29663
[details]
GMail scroll bars missing, v1 Oops. Some extra changes snuck in.
Dimitri Glazkov (Google)
Comment 3
2009-04-21 15:40:44 PDT
Created
attachment 29665
[details]
GMail scroll bars missing, v1.1 WebCore/ChangeLog | 11 +++++++++++ WebCore/platform/ScrollView.cpp | 20 ++++++++++---------- 2 files changed, 21 insertions(+), 10 deletions(-)
Dimitri Glazkov (Google)
Comment 4
2009-04-21 16:12:13 PDT
Created
attachment 29667
[details]
GMail scroll bars missing, v2. WebCore/ChangeLog | 11 +++++++++++ WebCore/platform/ScrollView.cpp | 17 +++++++++-------- WebKit/mac/ChangeLog | 11 +++++++++++ WebKit/mac/WebView/WebDynamicScrollBarsView.m | 19 ++++++++++--------- 4 files changed, 41 insertions(+), 17 deletions(-)
Darin Adler
Comment 5
2009-04-21 16:27:50 PDT
Is there a way to make a regression test for this? I don't want it to break again.
Dimitri Glazkov (Google)
Comment 6
2009-04-21 16:34:40 PDT
Created
attachment 29669
[details]
Deficient layout test attempt I haven't yet been able to come up with a good layout test. This is how far I've gotten, but I can only trigger failure on Safari/Win and Chromium. I'll think on this some more. Obviously, appreciate any ideas.
Dimitri Glazkov (Google)
Comment 7
2009-04-22 15:56:30 PDT
Comment on
attachment 29667
[details]
GMail scroll bars missing, v2. Better patch coming up.
Dimitri Glazkov (Google)
Comment 8
2009-04-22 16:09:49 PDT
Created
attachment 29694
[details]
GMail scroll bars missing, v3. LayoutTests/ChangeLog | 9 +++++ .../fast/overflow/overflow-y-scroll-expected.txt | 3 ++ LayoutTests/fast/overflow/overflow-y-scroll.html | 39 ++++++++++++++++++++ WebCore/ChangeLog | 13 +++++++ WebCore/platform/ScrollView.cpp | 17 +++++---- WebKit/mac/ChangeLog | 11 ++++++ WebKit/mac/WebView/WebDynamicScrollBarsView.m | 19 +++++----- 7 files changed, 94 insertions(+), 17 deletions(-)
Darin Adler
Comment 9
2009-04-22 16:57:08 PDT
Comment on
attachment 29694
[details]
GMail scroll bars missing, v3. r=me Hyatt should probably look at this too.
Dimitri Glazkov (Google)
Comment 10
2009-04-23 10:02:40 PDT
Hyatt says fine.
Dimitri Glazkov (Google)
Comment 11
2009-04-23 15:34:29 PDT
Landed as
http://trac.webkit.org/changeset/42791
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug