WebCore:

2009-04-23  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=25313
        Missing scroll bars in GMail.

        Test: fast/overflow/overflow-y-scroll.html

        * platform/ScrollView.cpp:
        (WebCore::ScrollView::updateScrollbars): Added check for the ScrollbarAlwaysOn
        scroll mode.

LayoutTests:

2009-04-23  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Darin Adler.
        https://bugs.webkit.org/show_bug.cgi?id=25313
        Missing scroll bars in GMail.

        * fast/overflow/overflow-y-scroll-expected.txt: Added.
        * fast/overflow/overflow-y-scroll.html: Added.

WebKit/mac:

2009-04-23  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=25313
        Missing scroll bars in GMail.

        * WebView/WebDynamicScrollBarsView.m:
        (-[WebDynamicScrollBarsView updateScrollers]): Added check for the ScrollbarAlwaysOn
            scroll mode.

Canonical link: https://commits.webkit.org/34843@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42791 268f45cc-cd09-0410-ab3c-d52691b4dbfc